feat(FW): Fix FairnessServiceImpl using immutable List